fix page header bleed

--- a/src/app/(site)/globals.css
+++ b/src/app/(site)/globals.css
@@ -225,6 +225,6 @@
 	}
 
 	.header-line {
-		@apply absolute h-0.5 bg-secondary w-full top-[77px] sm:top-[108px] md:top-[134px];
+		@apply absolute h-0.5 bg-secondary top-[77px] sm:top-[108px] md:top-[134px];
 	}
 }
